test/fail/event-with-invalid-action.app
//No function
application test

  define page root(){
    action tst(){}
  
    block[onclick := test()]{"bla"}
  }